# SAMY

./: .gitignore  .gitmodules  README.md  _config.yml
SAMYCore/: CMakeLists.txt  Dockerfile  README.md  fixing_unions.txt
SAMYCore/OPCUA_Models/: Readme.m
SAMYCore/OPCUA_Models/CRCL_OPCUAModel/: CompileModel.sh
SAMYCore/OPCUA_Models/CRCL_OPCUAModel/Published/: CRCL\CRCL.NodeIds.csv
SAMYCore/OPCUA_Models/all_models/Published/: CRCL.Types.bsd_unionsCorrected
SAMYCore/OPCUA_Models/nodeset_compiler/: backend_open62541_datatypes.py  backend_open62541_typedefinitions.py
SAMYCore/OPCUA_Python/: CRCL.Types.bsd  CRCL_DataTypes.py  CRCL_DataTypes.txt  README.TXT  clientEvent.py  client_example.py  client_example_output.txt  generateDataBase.py  structuresGenerator.py  template_basic_script.py  test2.yaml  test_writing_subtypes.py  writeDataBase.py
SAMYCore/OPCUA_Python/Basic_Test_Servers/customDataTypes_open62541_example/: CMakeLists.txt  custom_datatype.h  server_types_custom.c
SAMYCore/OPCUA_Python/Basic_Test_Servers/simple_union_generated_test/: CMakeLists.txt  client_types_custom.c  server.cpp
SAMYCore/OPCUA_Python/FreeOPCUA_fixed_stack/common/: events.py  utils.py
SAMYCore/SAMYControl/: MiddlewareSAMYControlInterface.py  PDDL_Fluent_InformationSource.txt  PDDLbasedController_Configuration_File.txt  SAMYControlInterface.py  SAMYControllerBase.py  configFile.txt  test.plan  testDTbasedController.py  testDTbasedController_MINI.py  testPDDLbasedController.py
SAMYCore/SAMYControl/DTbasedController/: DTControlDotFileParser.py  DTbasedController.py
SAMYCore/SAMYControl/DTbasedController/auxiliar_scripts_and_examples/: check_saved_classifiers.py  check_saved_datasets_and_metadata.py  example.py
SAMYCore/SAMYControl/DTbasedController/dtcontrol/: bdd.py  benchmark_suite.py  timeout.py  util.py
SAMYCore/SAMYControl/PDDLbasedController/: PDDL.py  PDDLbasedController.py  PDDLbasedControllerParser.py  action.py
SAMYCore/SAMYControl/PDDLbasedController/min/: domain-min-strips.pddl  domain-min-strips2.pddl  domain-min-temporal2.pddl  min_notes.md  plan-min-strips-1-manual.plan  plan-min-strips-3-manual.plan  plan-min-strips2-1-manual.plan  plan-min-temporal-1-manual.plan  problem-min-strips-1.pddl  problem-min-strips2-1.pddl  problem-min-temporal2-1.pddl  states-min-temporal2-1-manual.txt
SAMYCore/SAMYControl/UseCase1/: UseCase1_Controller.dot  writeDataBase.py
SAMYCore/SAMYControl/UseCase1/configFiles/: InformationSources.yaml  RobotsConfiguration.yaml  SAMYCoreConfig.yaml  skills.yaml
SAMYCore/SAMYControl/dtController_output/: UseCase1_Controller_X_metadata  UseCase1_Controller_Y_metadata  UseCase1_Controller_test  minUseCaseDotController_X_metadata  minUseCaseDotController_Y_metadata  minUseCaseDotController_test  useCaseExample_X_metadata  useCaseExample_test
SAMYCore/SAMYControl/minUseCase/DTbasedController/: minUseCaseDotController.dot
SAMYCore/SAMYControl/minUseCase/PDDL/: domain-min-temporal.pddl  plan-min-strips-1-manual.plan  plan-min-strips-2-manual.plan  plan-min-temporal2-1-manual.plan  problem-min-strips-2.pddl  problem-min-strips-3.pddl  problem-min-temporal-1.pddl  states-min-temporal-1-manual.txt
SAMYCore/Tests/CRCLnamespace_tests/: testsClient.cpp  testsServer.cpp
SAMYCore/ThirdParties/: logging.h  logging_opcua.h
SAMYCore/UseCases/UseCase1/ControllerFiles/: useCaseExample.dot  useCaseExample.dot_Y_metadata  useCaseExample.dot_test
SAMYCore/configFiles/: InformationSources.yaml  RobotsConfiguration.yaml  RobotsConfiguration_long.yaml  SAMYCoreConfig.yaml  Skills.yaml  Skills_minimal.yaml  TestInformationSources.yaml  TestRobotsConfiguration.yaml  TestSAMYCoreConfig.yaml  TestSkills.yaml  UseCase1.yaml
SAMYCore/configFiles/UseCaseFHTW/: DataBaseFile.yaml  InformationSources.yaml  RobotsConfiguration.yaml  SAMYCoreConfig.yaml  Skills.yaml
SAMYCore/src/: main.cpp
SAMYCore/src/Core/: samycore.cpp
SAMYCore/src/Core/include/: samycore.h
SAMYCore/src/Helpers/: helpers.cpp
SAMYCore/src/Helpers/include/: helpers.h
SAMYCore/src/InformationSource/: informationSource.cpp
SAMYCore/src/InformationSource/include/: informationSource.h
SAMYCore/src/Logging/include/: logging.h  logging_opcua.h
SAMYCore/src/OPCUA_Server/: OpcUaServer.cpp
SAMYCore/src/OPCUA_Server/include/: OpcUaServer.h  helper.hpp
SAMYCore/src/Parsers/: dataBaseParser.cpp  informationSourcesParser.cpp  robotsParser.cpp  samycoreConfigParser.cpp  skillsParser.cpp
SAMYCore/src/Parsers/include/: yaml_parsers.h
SAMYCore/src/SAMYCoreConfig/include/: samycoreConfig.h
SAMYCore/src/SAMYCoreInterfaceGenerator/: robotsNodesAddition.cpp  samycoreInterfaceGenerator.cpp  skillsMethodsCallbacks.cpp  skillsNodesAddition.cpp  systemStatusNodes.cpp
SAMYCore/src/SAMYCoreInterfaceGenerator/include/: samycoreInterfaceGenerator.h
SAMYCore/src/SAMYRobot/: Publisher.c
SAMYCore/src/SAMYRobot/include/: SAMYRobot.h
SAMYCore/src/SAMYSkill/: samyskill.cpp
SAMYCore/src/SAMYSkill/include/: ProgramState.h  ProgramTransition.h  samyskill.h
SAMYCore/tools/: ci.sh
SAMYPluginTemplates/SAMYPlugins_Template_Python/: Doxyfile  pyproject.toml  setup.cfg
SAMYPluginTemplates/SAMYPlugins_Template_Python/src/opcua/: __init__.py
SAMYPluginTemplates/SAMYPlugins_Template_Python/src/samyplugin/: CRCL_DataTypes.py  plugin.py  settings.py
SAMYPluginTemplates/SAMYPlugins_Template_Python/src/transform/: transform.py  transform_old.py
SAMYPluginTemplates/SAMYPlugins_Template_Python/tests/: message_log.txt  testclient.py  testplugin.py  tests.py
SAMYPluginTemplates/SAMYPlugins_Template_Python/tests/robot/: robot.py
SAMYPluginTemplates/SamyPlugins_Template_Cpp/: CMakeLists.txt  Dockerfile  Doxyfile
SAMYPluginTemplates/SamyPlugins_Template_Cpp/src/Communication/: publisher.c  samy_robot.c  subscriber.c
SAMYPluginTemplates/SamyPlugins_Template_Cpp/src/Helpers/: helpers.cpp
SAMYPluginTemplates/SamyPlugins_Template_Cpp/src/OPCUA_CRCL/: Readme.m
SAMYPluginTemplates/SamyPlugins_Template_Cpp/src/Plugin/: plugin.cpp
SAMYPluginTemplates/SamyPlugins_Template_Cpp/src/Robot/: main.cpp  (+1 more)
(+268 files in other folders)
