[metadata]
name = samyplugin
version = 0.2
author = Felix Leber
author_email = leber@technikum-wien.at
description = Samy plugin package.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TW-Robotics/SAMYPlugins_Templates

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
